--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "amqp-connection-manager": "^4.1.6",
     "amqplib": "^0.10.3",
+    "aws-sdk": "^2.1225.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
